// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile event handlers A list of quota options for a given profile is returned 1`] = `200`;

exports[`Profile event handlers A list of quota options for a given profile is returned 2`] = `
Array [
  "medium",
]
`;

exports[`Profile event handlers A profiles contacts are returned 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT contact.*
          FROM contact
          JOIN profile_contact ON contact.id = profile_contact.contact_id
            WHERE profile_contact.profile_id = $1;
      ",
      "values": Array [
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers A profiles contacts are returned 2`] = `200`;

exports[`Profile event handlers A profiles contacts are returned 3`] = `
Array [
  Object {
    "archived": false,
    "createdAt": "2020-09-10T18:14:13.436Z",
    "email": "jane@example.com",
    "firstName": "Jane",
    "githubId": "jane1100",
    "id": 1,
    "lastName": "Doe",
    "roleId": 1,
    "updatedAt": "2020-09-10T18:14:13.436Z",
  },
  Object {
    "archived": false,
    "createdAt": "2020-09-10T18:14:13.436Z",
    "email": "john@example.com",
    "firstName": "John",
    "githubId": "john1100",
    "id": 2,
    "lastName": "Doe",
    "roleId": 2,
    "updatedAt": "2020-09-10T18:14:13.436Z",
  },
]
`;

exports[`Profile event handlers A profiles quota size is returned 1`] = `200`;

exports[`Profile event handlers A profiles quota size is returned 2`] = `"small"`;

exports[`Profile event handlers Fetch a list of quota options for a given profile should throw 1`] = `"Unable to fetch allowed quota-sizes for profile 4"`;

exports[`Profile event handlers Fetch profiles quota size should throw 1`] = `"Unable fetch profile quota size with profile ID 4"`;

exports[`Profile event handlers Fetch single profile contacts should throw 1`] = `"Unable fetch profile contacts with profile ID 1"`;

exports[`Profile event handlers Fetch single profile contacts should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT contact.*
          FROM contact
          JOIN profile_contact ON contact.id = profile_contact.contact_id
            WHERE profile_contact.profile_id = $1;
      ",
      "values": Array [
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Link a contact to profile should throw 1`] = `"Unable to add contact to profile"`;

exports[`Profile event handlers Link a contact to profile should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        INSERT INTO profile_contact
          (profile_id, contact_id)
          VALUES ($1, $2) RETURNING *;",
      "values": Array [
        4,
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Link a contact to profile successfully 1`] = `
Array [
  Array [
    Object {
      "text": "
        INSERT INTO profile_contact
          (profile_id, contact_id)
          VALUES ($1, $2) RETURNING *;",
      "values": Array [
        4,
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Link a contact to profile successfully 2`] = `201`;

exports[`Profile event handlers Link a contact to profile successfully 3`] = `undefined`;

exports[`Profile event handlers Profile edit requests are returned 1`] = `200`;

exports[`Profile event handlers Profile edit requests are returned 2`] = `
Array [
  Object {
    "archived": false,
    "createdAt": "2020-09-10T18:14:13.304Z",
    "editObject": Object {
      "quota": "medium",
      "quotas": Object {
        "cpu": Object {
          "limits": "16",
          "requests": "8",
        },
        "memory": Object {
          "limits": "64Gi",
          "requests": "32Gi",
        },
        "storage": Object {
          "backup": "50Gi",
          "block": "100Gi",
          "capacity": "100Gi",
          "file": "100Gi",
        },
      },
    },
    "editType": "quotaSize",
    "id": 1,
    "natsContext": Object {
      "action": "edit",
      "displayName": "Health Gateway",
      "namespaces": Array [
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "elf077-tools",
          "namespaceId": 1,
        },
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "elf077-test",
          "namespaceId": 2,
        },
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "elf077-dev",
          "namespaceId": 3,
        },
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "elf077-prod",
          "namespaceId": 4,
        },
      ],
      "newDisplayName": "NULL",
      "productOwner": Object {
        "email": "jane@example.com",
        "provider": "github",
        "userId": "jane1100",
      },
      "profileId": 4,
      "quota": "small",
      "quotas": Object {
        "cpu": Object {
          "limits": "8",
          "requests": "4",
        },
        "memory": Object {
          "limits": "32Gi",
          "requests": "16Gi",
        },
        "storage": Object {
          "backup": "25Gi",
          "block": "50Gi",
          "capacity": "50Gi",
          "file": "50Gi",
        },
      },
      "technicalContact": Object {
        "email": "john@example.com",
        "provider": "github",
        "userId": "john1100",
      },
      "type": "standard",
    },
    "natsSubject": "registry_project_provisioning",
    "profileId": 1,
    "updatedAt": "2020-09-10T18:14:13.304Z",
  },
  Object {
    "archived": false,
    "createdAt": "2020-09-10T18:14:13.304Z",
    "editObject": Array [
      Object {
        "email": "jane@example.com",
        "firstName": "Jane",
        "githubId": "jane1100test",
        "id": 1,
        "lastName": "Doe",
        "roleId": 1,
      },
      Object {
        "email": "jim@example.com",
        "firstName": "John",
        "githubId": "john1100test",
        "id": 2,
        "lastName": "Doe",
        "roleId": 2,
      },
    ],
    "editType": "contacts",
    "id": 2,
    "natsContext": Object {
      "action": "edit",
      "displayName": "Project X",
      "namespaces": Array [
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "4ea35c-tools",
          "namespaceId": 13,
        },
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "4ea35c-test",
          "namespaceId": 14,
        },
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "4ea35c-dev",
          "namespaceId": 15,
        },
        Object {
          "clusters": Array [
            Object {
              "clusterId": 1,
              "name": "silver",
              "provisioned": true,
            },
          ],
          "name": "4ea35c-prod",
          "namespaceId": 16,
        },
      ],
      "newDisplayName": "NULL",
      "productOwner": Object {
        "email": "jane@example.com",
        "provider": "github",
        "userId": "jane1100test",
      },
      "profileId": 4,
      "quota": "small",
      "quotas": Object {
        "cpu": Object {
          "limits": "8",
          "requests": "4",
        },
        "memory": Object {
          "limits": "32Gi",
          "requests": "16Gi",
        },
        "storage": Object {
          "backup": "25Gi",
          "block": "50Gi",
          "capacity": "50Gi",
          "file": "50Gi",
        },
      },
      "technicalContact": Object {
        "email": "john@example.com",
        "provider": "github",
        "userId": "john1100test",
      },
      "type": "standard",
    },
    "natsSubject": "registry_project_provisioning",
    "profileId": 4,
    "updatedAt": "2020-09-10T18:14:13.304Z",
  },
]
`;

exports[`Profile event handlers Request profile contacts edit with provisioner-related changes 1`] = `202`;

exports[`Profile event handlers Request profile contacts edit with provisioner-related changes 2`] = `undefined`;

exports[`Profile event handlers Request profile quota size edit should throw due to db transaction issue 1`] = `"Unable to update quota-size for profile 4"`;

exports[`Profile event handlers Request profile quota size edit should throw due to invalid quota upgrade 1`] = `"Unable to update quota-size for profile 4"`;

exports[`Profile event handlers Request profile quota size edit successfully 1`] = `204`;

exports[`Profile event handlers Request profile quota size edit successfully 2`] = `undefined`;

exports[`Profile event handlers Update profile contacts with non provisioner-related changes 1`] = `204`;

exports[`Profile event handlers Update profile contacts with non provisioner-related changes 2`] = `undefined`;
